# c-plus-plus-for-creators-robotics-practical-10-5

./: .gitmodules  CMakeLists.txt  README.md
include/: vector_3d.hpp
scripts/: vector_3d_library_test.py
src/: main.cpp  vector_3d.cpp  vector_export.cpp
